fix alignment and change icon for list and grid

--- a/app/(dashboard)/browse-task/browsetask.module.css
+++ b/app/(dashboard)/browse-task/browsetask.module.css
@@ -26,7 +26,7 @@
 
 /* Shell */
 .shell {
-  max-width: 1280px;
+  max-width: 90%;
   margin: 0 auto;
   padding: 32px 32px 24px;
 }
